# LinearList

./: .gitignore  ArrayList.hpp  ArrayListOperator.hpp  CMakeLists.txt  List.hpp  main.cpp
Algorithm/EquationSolve/: EquationSolve.hpp
Algorithm/Peterson's_Algorithm/: PetersonAlgorithm.hpp
Algorithm/Search/: Search.hpp
Algorithm/Sort/: Sort.h
Implementation/: ArrayList.hpp  BinaryTree.hpp  OrderedList.hpp  Queue.hpp  SingleLinkTable.hpp  Stack.hpp
Interface/: List.hpp
Operator/: ListOperator.hpp
